Fixed benchmark.